--- a/src/components/UI/Input/Input.module.css
+++ b/src/components/UI/Input/Input.module.css
@@ -1,7 +1,8 @@
 .postInput {
     width: 100%;
     padding: 10px;
-    margin: 10px;
+    margin-bottom: 5px;
+    margin-top: 10px;
     border: 1px solid teal;
     
 }
